# midnight_fetcher_bot_public

./: .env.example  .gitattributes  .gitignore  README.md  next.config.ts  package-lock.json  package.json  run.cmd  setup.cmd  setup.sh  setup_internal.sh  start.sh
app/: globals.css  layout.tsx  page.tsx
app/api/devfee/: route.ts
app/api/stats/: route.ts
app/mining/: page.tsx
components/ui/: alert.tsx  button.tsx  card.tsx  input.tsx  stat-card.tsx
docs/: ADDRESS_QUERY_FAQ.md  API_DEPRECATION_NOTES.md  MIDNIGHT_API_QUERY.md  SIGNATURE_VERIFICATION_METHOD.md  STAKE_KEY_LIMITATIONS.md
hashengine/: Cargo.toml  build.cmd  build.rs  build.sh  package-lock.json  package.json
hashengine/src/: hashengine.rs  lib.rs  rom.rs
lib/devfee/: manager.ts
lib/hash/: client.ts  engine.ts  native-loader.ts  types.ts
lib/mining/: auto-startup-server.ts  chain-transport.ts  config-manager.ts  devfee.ts  difficulty.ts  nonce.ts  orchestrator.ts  preimage.ts  solution-submitter.ts  types.ts  website-scraper.ts
lib/scraping/: browser-service.ts  challenge-scraper.ts  registration-scraper.ts  solution-submitter-scraper.ts  stats-scraper.ts  tandc-scraper.ts
lib/stats/: compute.ts
lib/storage/: config-manager.ts  donation-logger.ts  receipts-logger.ts
lib/utils/: logger.ts
lib/wallet/: address-limits.md  address-reconstructor.ts  blockchain-query.ts  encryption.ts  manager.ts  midnight-api-query.ts  signature-verification-query.ts  stake-key-query.ts
scripts/: auto-startup.js  summarize_donations.py  test-update.py  update-runpod-pods  update-runpod-pods.py
(+27 files in other folders)
